--- a/GeneralStoreMVC/Views/Home/Index.cshtml
+++ b/GeneralStoreMVC/Views/Home/Index.cshtml
@@ -1,22 +1,23 @@
-﻿@{
+﻿@model IEnumerable<GeneralStoreMVC.Models.Product>
+
+@{
     ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>General Store</h1>
+    <p class="lead">General Store is a free general store for buying great products.</p>
+    <p>@Html.ActionLink("Learn More About Us", "About")</p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Our General Store, located in the suburban Indianapolis metro area, sells a multitude of fine footwear selections and luxury items.</br></br>
+            Come browse our products and see what we have for you.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p>@Html.ActionLink("Check Products", "Index", "Product", null, new { @class = "btn btn-primary btn-large" })</p>
     </div>
     <div class="col-md-4">
         <h2>Get more libraries</h2>
