--- a/GeneralStoreMVC/Views/Product/Index.cshtml
+++ b/GeneralStoreMVC/Views/Product/Index.cshtml
@@ -41,9 +41,9 @@
                 @Html.DisplayFor(modelItem => item.IsFood)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ProductId })
-                @Html.ActionLink("Details", "Details", new { id = item.ProductId })
-                @Html.ActionLink("Delete", "Delete", new { id = item.ProductId })
+                @Html.ActionLink("Edit", "Edit", new { id = item.ProductID })
+                @Html.ActionLink("Details", "Details", new { id = item.ProductID })
+                @Html.ActionLink("Delete", "Delete", new { id = item.ProductID })
             </td>
         </tr>
     }
