--- a/GeneralStoreMVC/Views/Shared/_Layout.cshtml
+++ b/GeneralStoreMVC/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Product", "Index", "Product")</li>
+                    <li>@Html.ActionLink("Customer", "Index", "Customer")</li>
+                    <li>@Html.ActionLink("Transaction", "Index", "Transaction")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
